<?xml version="1.0" encoding="utf-8" ?>

<!--<LinearLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:orientation="vertical"-->
<!--    android:paddingLeft="16dp"-->
<!--    android:paddingRight="16dp">-->

<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content" />-->
<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content" />-->
<!--    <EditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content" />-->
<!--    <Button-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Enviar"/>-->


<!--</LinearLayout>-->
<!--<RelativeLayout-->
<!--    xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:paddingRight="16dp"-->
<!--    android:paddingLeft="16dp" >-->
<!--    <EditText-->
<!--        android:id="@+id/nome"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Titulo"-->
<!--       />-->
<!--    <EditText-->
<!--        android:id="@+id/sobrenome"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/nome"/>-->
<!--    <Spinner-->
<!--        android:id="@+id/data"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/sobrenome"/>-->

<!--    <TextView-->
<!--        android:id="@+id/cidade"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Cidade: Curitiba"-->
<!--        android:layout_below="@id/data"/>-->
<!--    <TextView-->
<!--        android:id="@+id/gosto"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Gosto Musical"-->
<!--        android:layout_below="@id/cidade"/>-->
<!--    <Button-->
<!--        android:id="@+id/btn_enviar"-->
<!--        android:layout_width="96dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/gosto"-->
<!--        android:text="Enviar"/>-->
<!--</RelativeLayout>-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:text="@string/cars"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo" />


    <TextView
        android:id="@+id/tv_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/favorite"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tv_carros"
        app:layout_constraintTop_toTopOf="@id/tv_carros" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/eletric_car"
        app:layout_constraintLeft_toLeftOf="@id/tv_titulo"
        app:layout_constraintTop_toBottomOf="@id/tv_favoritos" />

    <TextView
        android:id="@+id/tv_preco"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/price"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_preco_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="R$ 9999.00"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/iv_image"
        app:layout_constraintStart_toEndOf="@id/tv_preco"
        />

    <TextView
        android:id="@+id/tv_bateria"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:text="@string/batery"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_preco"
        />

    <TextView
        android:id="@+id/tv_bateria_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="300 kWh"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_preco_value"
        app:layout_constraintStart_toEndOf="@id/tv_bateria"
        />

    <TextView
        android:id="@+id/tv_potencia"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:text="@string/potency"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria"
        />

    <TextView
        android:id="@+id/tv_potencia_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="600 cv"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_bateria_value"
        app:layout_constraintStart_toEndOf="@id/tv_potencia"
        />

    <TextView
        android:id="@+id/tv_recarga"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:text="@string/charge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia"
        />

    <TextView
        android:id="@+id/tv_recarga_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="23 min"
        android:layout_marginLeft="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_potencia_value"
        app:layout_constraintStart_toEndOf="@id/tv_recarga"
        />

    <EditText
        android:id="@+id/et_preco_kwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/price_kwh"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recarga_value" />

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="4dp"
        android:inputType="numberDecimal"
        android:hint="@string/percorrido"
        android:maxLength="10"
        app:layout_constraintTop_toBottomOf="@id/et_preco_kwh"
        app:layout_constraintStart_toStartOf="@id/et_preco_kwh"
        app:layout_constraintEnd_toEndOf="@+id/et_preco_kwh"/>
    <Button
        android:id="@+id/btn_calcular"
        android:text="@string/calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido"
        app:layout_constraintStart_toStartOf="@id/et_km_percorrido"
        app:layout_constraintEnd_toEndOf="@id/et_km_percorrido"/>


    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/btn_calcular"
        app:layout_constraintTop_toBottomOf="@+id/btn_calcular" />

</androidx.constraintlayout.widget.ConstraintLayout>